--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.3",
+    "dotenv": "^4.0.0",
     "express": "^4.13.3",
     "express-handlebars": "^3.0.0",
     "knex": "^0.12.6",
