--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bcrypt": "^1.0.2",
+    "bcryptjs": "^2.4.0",
     "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.3",
     "dotenv": "^4.0.0",
